--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -17,11 +17,4 @@ jobs:
                     docker pull mixeway/scanner:latest
             - name: Run Scan
                 run: |
-                    docker run -e OSS_USERNAME=chicken-briers-3x@icloud.com -e
-                    OSS_KEY=ff3ff6b260ba95aea0749eb82bddc5c00eeddb63 -e
-                    MIXEWAY_URL=https://hub.mixeway.io -e
-                    MIXEWAY_KEY=03179564-2434-4383-8f51-825e29e9e92b -e
-                    MIXEWAY_PROJECT_ID=190 -e MODE=STANDALONE -e
-                    MIXEWAY_PROJECT_NAME=superstudentcyberswir_lab_secure_app -e COMMIT_ID=test -e
-                    BRANCH=master -v /opt/lab_sec_audit/sast:/opt/sources
-                    mixeway/scanner:latest
+                    docker run -e OSS_USERNAME=chicken-briers-3x@icloud.com -e OSS_KEY=ff3ff6b260ba95aea0749eb82bddc5c00eeddb63 -e MIXEWAY_URL=https://hub.mixeway.io -e MIXEWAY_KEY=03179564-2434-4383-8f51-825e29e9e92b -e MIXEWAY_PROJECT_ID=190 -e MODE=STANDALONE -e MIXEWAY_PROJECT_NAME=superstudentcyberswir_lab_secure_app -e COMMIT_ID=test -e BRANCH=master -v /opt/lab_sec_audit/sast:/opt/sources mixeway/scanner:latest
