--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -1,20 +1,39 @@
 name: Perform Mixeway Scan
 
+on:
+  push:
+    branches:
+      - master
+
 jobs:
-    mixeway-scan:
-        name: Mixeway Scanning
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v1
-            - name: Prepare variables
-                id: vars
-                shell: bash
-                run: |
-                    echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-                    echo "::set-output name=sha_short::$(git rev-parse HEAD)"
-            - name: Prepare Mixeway docker image
-                run: |
-                    docker pull mixeway/scanner:latest
-            - name: Run Scan
-                run: |
-                    docker run -e OSS_USERNAME=chicken-briers-3x@icloud.com -e OSS_KEY=ff3ff6b260ba95aea0749eb82bddc5c00eeddb63 -e MIXEWAY_URL=https://hub.mixeway.io -e MIXEWAY_KEY=03179564-2434-4383-8f51-825e29e9e92b -e MIXEWAY_PROJECT_ID=190 -e MODE=STANDALONE -e MIXEWAY_PROJECT_NAME=superstudentcyberswir_lab_secure_app -e COMMIT_ID=test -e BRANCH=master -v /opt/lab_sec_audit/sast:/opt/sources mixeway/scanner:latest
+  mixeway-scan:
+    name: Mixeway Scanning
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Prepare variables
+        id: vars
+        shell: bash
+        run: |
+          echo "branch=${GITHUB_REF#refs/heads/}" >> "$GITHUB_OUTPUT"
+          echo "sha_short=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
+      - name: Prepare Mixeway docker image
+        run: |
+          docker pull mixeway/scanner:latest
+
+      - name: Run Scan
+        run: |
+          docker run \
+            -e OSS_USERNAME=chicken-briers-3x@icloud.com \
+            -e OSS_KEY=ff3ff6b260ba95aea0749eb82bddc5c00eeddb63 \
+            -e MIXEWAY_URL=https://hub.mixeway.io \
+            -e MIXEWAY_KEY=03179564-2434-4383-8f51-825e29e9e92b \
+            -e MIXEWAY_PROJECT_ID=190 \
+            -e MODE=STANDALONE \
+            -e MIXEWAY_PROJECT_NAME=superstudentcyberswir_lab_secure_app \
+            -e COMMIT_ID=${{ steps.vars.outputs.sha_short }} \
+            -e BRANCH=${{ steps.vars.outputs.branch }} \
+            -v /opt/lab_sec_audit/sast:/opt/sources \
+            mixeway/scanner:latest
